/invest(GET) api is complete
